--- a/day10/responsive.html
+++ b/day10/responsive.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../../common/reset.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="box">
-      <span class="recruit">채용 정보에 관하여</span>
-    </div>
+    <section class="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </section>
   </body>
 </html>
